hphp/test/zend/good/ext/opcache/tests/bug66176.php
<?php
function foo($v) {
	global $a;
	return $a[$v];
}
$a = array(PHP_VERSION => 1);
var_dump(foo(PHP_VERSION));